@@ -42,15 +42,7 @@
 			<option
 				value="1">JYes</option>
 		</field>
-		
-		<field
-			id="page_heading"
-			name="page_heading"
-			type="text"
-			label="Menus_Item_Page_Heading_Label"
-			description="Menus_Item_Page_Heading_Desc"
-			default=""/>
-			
+
 		<field
 			id="page_heading"
 			name="page_heading"
