@@ -27,7 +27,7 @@ MENUS_LINKTYPE_OPTIONS_LABEL=Page Options
 
 JMENUS_HEADING_PUBLISHED_ITEMS=# Published
 JMENUS_HEADING_TRASHED_ITEMS=# Trashed
-JMENUS_HEADING_UNPUBLISHED_ITEMS=# UnPublished
+JMENUS_HEADING_UNPUBLISHED_ITEMS=# Unpublished
 
 MENUS_MENU_DESCRIPTION_LABEL=Description
 MENUS_MENU_DESCRIPTION_DESC=A description about the purpose of the menu.
