@@ -5,8 +5,8 @@
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
 
-MOD_STATUS_USERS=Logged-in
-MOD_STATUS_DESC.=This module shows the status of the logged-in users.
+MOD_STATUS_USERS=Logged-in Users
+MOD_STATUS_DESC=This module shows the status of the logged-in users.
 MOD_STATUS_LOG_OUT=Log out
 MOD_STATUS_MESSAGES=Messages
 MOD_STATUS_CACHE_LABEL=Caching
